msa-eureka-server/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: msa-eureka-server
  name: msa-eureka-server
spec:
  ports:
  - port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    run: msa-eureka-server
  type: ClusterIP
